# Call_Me_Maybe

./: .gitignore  Makefile  README.md  borrar.py  pyproject.toml  test_functions.py
GUIDES/: GUIA_COMPLETA.md  claude  guia_call_me_maybe.docx  guiagem.txt  guibuena.py  guibuena.txt  otra.txt  otramas.txt
data/output/: function_calling_results.json  response.txt
src/: __init__.py  __main__.py  constrained_decoder.py  function_caller.py  models.py  prompt_builder.py  tools.py  vocab.py
